--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
       <div ng-view></div>
 
-      <script src="bower_components/angualar/angular.min.js"></script>
-      <script src="bower_components/angular-route/angular-route.min.js"></script>
+      <script type="text/javascript" src="bower_components/angualar/angular.min.js"></script>
+      <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
       <script src="http://localhost:8080/socket.io/socket.io.js"></script>
-      <script src="js/main.js"></script>
+      <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
