Fixed allcompile errors

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <body>
 
       <div ng-view></div>
+      <!--<app-root>Loading...</app-root>-->
 
       <script type="text/javascript" src="bower_components/angualar/angular.min.js"></script>
       <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
